--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,6 +1,9 @@
 
 // 状态效果
 
+status.ve-addon-schematics-water-drop.name = 水滴
+status.ve-addon-schematics-water-drop.details = 你要撞大运喽
+
 status.ve-dashing.name = "冲刺中"
 status.ve-dashing.details = 补充说明：机翻。
 status.ve-drag.name = "拖动"
@@ -11,8 +14,8 @@ status.ve-killed.name = "清除"
 status.ve-killed.details = 补充说明：机翻。\n推测用于杀死某个单位。
 status.ve-plasma-status-orange.name = "电浆-橙色"
 status.ve-plasma-status-orange.details = 补充说明：机翻。
-status.ve-thunder-charging.name = "雷电充能"
-status.ve-thunder-charging.details = 补充说明：机翻。
+status.ve-thunder-charging.name = "电啸蓄能"
+status.ve-thunder-charging.details = 补充说明：推测用于t5飞碟-电啸的攻击。
 status.ve-walking.name = "步行"
 status.ve-walking.details = 补充说明：机翻。
 
